@@ -274,11 +274,6 @@ SymbolsPreprocFile "orca-chars.dic"
 #AddModule "rhvoice"                  "sd_rhvoice"   "rhvoice.conf"
 #AddModule "voxin"                    "sd_voxin"     "voxin.conf"
 
-# DO NOT REMOVE the following line unless you have
-# a specific reason -- this is the fallback output module
-# that is only used when no other modules are in use
-#AddModule "dummy"         "sd_dummy"      ""
-
 # The output module testing doesn't actually connect to anything. It
 # outputs the requested commands to standard output and reads
 # responses from stdandard input. This way, Speech Dispatcher's
@@ -332,7 +327,7 @@ Include "clients/*.conf"
 # Copyright (C) 2017 Colomban Wendling <cwendling@hypra.fr>
 # Copyright (C) 2018 Raphaël POITEVIN <rpoitevin@hypra.fr>
 # Copyright (C) 2018 Florian Steinhardt <no.known.email@example.com>
-# Copyright (C) 2018-2021, 2023 Samuel Thibault <samuel.thibault@ens-lyon.org>
+# Copyright (C) 2018-2024 Samuel Thibault <samuel.thibault@ens-lyon.org>
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
