@@ -8,6 +8,7 @@ Version 0.12 (unreleased)
 * Update CLDR to version 44 and symbols from NVDA.
 * Add spd_fd function to C api.
 * Detect module failures from generic module.
+* Make the fallback espeak-ng and dummy modules hardcoded.
 
 Version 0.11.5
 * Update CLDR to version 43 and symbols from NVDA.
